--- a/密技/1.md
+++ b/密技/1.md
@@ -15,6 +15,6 @@
 <body>
 <font color=gray size=72 face="Brush Script MT">Love aphorism</font>
 
-&ensp;&ensp;&ensp; <font color=gray size=30 face="Brush Script MT">Do not forget the original intention</font>
+ <font color=gray size=30 face="Brush Script MT">Do not forget the original intention</font>
 </body>
 
